first section without full window

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         Заказать
                     </button>
                 </header>
-                <main class="main">
+                <div class="main">
                     <div class="main__img"></div>
                     <div class="main__content">
                         <h1 class="main__tittle">Мы делаем</h1>
@@ -71,7 +71,7 @@
                             <div class="main__el"></div>
                         </li>
                     </ul>
-                </main>
+                </div>
                 <a href="#" class="main__link-next">
                     <div class="main__scroll-logo"></div>
                 </a>
