--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Burger</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -47,28 +48,28 @@
                     </div>
                     <ul class="main__list">
                         <li class="main__item">
-                            <div class="main__el-active"></div>
+                            <a href="#" class="main__link"><div class="main__el-active"></div></a>
                         </li>
                         <li class="main__item">
-                            <div class="main__el"></div>
+                            <a href="#" class="main__link"><div class="main__el"></div></a>
                         </li>
                         <li class="main__item">
-                            <div class="main__el"></div>
+                            <a href="#" class="main__link"><div class="main__el"></div></a>
                         </li>
                         <li class="main__item">
-                            <div class="main__el"></div>
+                            <a href="#" class="main__link"><div class="main__el"></div></a>
                         </li>
                         <li class="main__item">
-                            <div class="main__el"></div>
+                            <a href="#" class="main__link"><div class="main__el"></div></a>
                         </li>
                         <li class="main__item">
-                            <div class="main__el"></div>
+                            <a href="#" class="main__link"><div class="main__el"></div></a>
                         </li>
                         <li class="main__item">
-                            <div class="main__el"></div>
+                            <a href="#" class="main__link"><div class="main__el"></div></a>
                         </li>
                         <li class="main__item">
-                            <div class="main__el"></div>
+                            <a href="#" class="main__link"><div class="main__el"></div></a>
                         </li>
                     </ul>
                 </div>
