--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <div class="main-section">
-            <div class="main-container">
+            <div class="container">
                 <header class="header">
                     <div class="logo">
                         <a href="index.html" class="logo__link">
@@ -76,6 +76,28 @@
                 <a href="#" class="main__link-next">
                     <div class="main__scroll-logo"></div>
                 </a>
+            </div>
+        </div>
+        <div class="best-section">
+            <div class="container">
+                <h1 class="best-section__tittle">Мы лучшие</h1>
+                <ul class="best-section__list">
+                    <li class="best-section__item">
+                        <div class="best-section__item-img best-section__item-img-meat"></div>
+                        <h2 class="best-section__item-tittle">100% свежее мясо</h2>
+                        <p class="best-section__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
+                    </li>
+                    <li class="best-section__item">
+                        <div class="best-section__item-img best-section__item-img-hand"></div>
+                        <h2 class="best-section__item-tittle">Ручная сборка</h2>
+                        <p class="best-section__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</p>
+                    </li>
+                    <li class="best-section__item">
+                        <div class="best-section__item-img best-section__item-img-natural"></div>
+                        <h2 class="best-section__item-tittle">Натуральные ингредиенты</h2>
+                        <p class="best-section__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
