position: fixed for navigate

--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
                 </ul>
             </div>
         </div>
+        <div class="staff">
+                <img src="img/ava/1.png" alt="" class="staff__ava">
+                <img src="img/ava/2.png" alt="" class="staff__ava">
+                <img src="img/ava/3.png" alt="" class="staff__ava">
+                <img src="img/ava/4.png" alt="" class="staff__ava">
+                <img src="img/ava/5.png" alt="" class="staff__ava">
+                <img src="img/ava/6.png" alt="" class="staff__ava">
+                <img src="img/ava/7.png" alt="" class="staff__ava">
+                <img src="img/ava/8.png" alt="" class="staff__ava">
+        </div>
     </div>
 </body>
 </html>
