header without main-section

--- a/index.html
+++ b/index.html
@@ -8,74 +8,76 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="main-section">
-            <div class="container">
-                <header class="header">
-                    <div class="logo">
-                        <a href="index.html" class="logo__link">
-                            <img src="img/logo/logo.png" alt="Mr burger">
-                        </a>
-                    </div>
-                    <ul class="header__list">
-                        <li class="header__item">
-                            <a href="#" class="header__item-link">О нас</a>
-                        </li>
-                        <li class="header__item">
-                            <a href="#" class="header__item-link">Бургеры</a>
-                        </li>
-                        <li class="header__item">
-                            <a href="#" class="header__item-link">Команда</a>
-                        </li>
-                        <li class="header__item">
-                            <a href="#" class="header__item-link">Меню</a>
-                        </li>
-                        <li class="header__item">
-                            <a href="#" class="header__item-link">Отзывы</a>
-                        </li>
-                        <li class="header__item">
-                            <a href="#" class="header__item-link">Контакты</a>
-                        </li>
-                    </ul>
-                    <button class="header__button">
-                        Заказать
-                    </button>
-                </header>
-                <div class="main">
-                    <div class="main__img"></div>
-                    <div class="main__content">
-                        <h1 class="main__tittle">Мы делаем</h1>
-                        <p class="main__text">натуральные бургеры</p>
-                    </div>
-                    <ul class="main__list">
-                        <li class="main__item">
-                            <a href="#" class="main__link"><div class="main__el-active"></div></a>
-                        </li>
-                        <li class="main__item">
-                            <a href="#" class="main__link"><div class="main__el"></div></a>
-                        </li>
-                        <li class="main__item">
-                            <a href="#" class="main__link"><div class="main__el"></div></a>
-                        </li>
-                        <li class="main__item">
-                            <a href="#" class="main__link"><div class="main__el"></div></a>
-                        </li>
-                        <li class="main__item">
-                            <a href="#" class="main__link"><div class="main__el"></div></a>
-                        </li>
-                        <li class="main__item">
-                            <a href="#" class="main__link"><div class="main__el"></div></a>
-                        </li>
-                        <li class="main__item">
-                            <a href="#" class="main__link"><div class="main__el"></div></a>
-                        </li>
-                        <li class="main__item">
-                            <a href="#" class="main__link"><div class="main__el"></div></a>
-                        </li>
-                    </ul>
+        <div class="wrap-main-section">
+            <header class="header">
+                <div class="logo">
+                    <a href="index.html" class="logo__link">
+                        <img src="img/logo/logo.png" alt="Mr burger">
+                    </a>
                 </div>
-                <a href="#" class="main__link-next">
-                    <div class="main__scroll-logo"></div>
-                </a>
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">О нас</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">Бургеры</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">Команда</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">Меню</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">Отзывы</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">Контакты</a>
+                    </li>
+                </ul>
+                <button class="header__button">
+                    Заказать
+                </button>
+            </header>
+            <div class="main-section">
+                <div class="container">
+                    <div class="main">
+                        <div class="main__img"></div>
+                        <div class="main__content">
+                            <h1 class="main__tittle">Мы делаем</h1>
+                            <p class="main__text">натуральные бургеры</p>
+                        </div>
+                        <ul class="main__list">
+                            <li class="main__item">
+                                <a href="#" class="main__link"><div class="main__el-active"></div></a>
+                            </li>
+                            <li class="main__item">
+                                <a href="#" class="main__link"><div class="main__el"></div></a>
+                            </li>
+                            <li class="main__item">
+                                <a href="#" class="main__link"><div class="main__el"></div></a>
+                            </li>
+                            <li class="main__item">
+                                <a href="#" class="main__link"><div class="main__el"></div></a>
+                            </li>
+                            <li class="main__item">
+                                <a href="#" class="main__link"><div class="main__el"></div></a>
+                            </li>
+                            <li class="main__item">
+                                <a href="#" class="main__link"><div class="main__el"></div></a>
+                            </li>
+                            <li class="main__item">
+                                <a href="#" class="main__link"><div class="main__el"></div></a>
+                            </li>
+                            <li class="main__item">
+                                <a href="#" class="main__link"><div class="main__el"></div></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <a href="#" class="main__link-next">
+                        <div class="main__scroll-logo"></div>
+                    </a>
+                </div>
             </div>
         </div>
         <div class="best-section">
