more in avatars

--- a/index.html
+++ b/index.html
@@ -102,15 +102,21 @@
                 </ul>
             </div>
         </div>
-        <div class="staff">
-                <img src="img/ava/1.png" alt="" class="staff__ava">
-                <img src="img/ava/2.png" alt="" class="staff__ava">
-                <img src="img/ava/3.png" alt="" class="staff__ava">
-                <img src="img/ava/4.png" alt="" class="staff__ava">
-                <img src="img/ava/5.png" alt="" class="staff__ava">
-                <img src="img/ava/6.png" alt="" class="staff__ava">
-                <img src="img/ava/7.png" alt="" class="staff__ava">
-                <img src="img/ava/8.png" alt="" class="staff__ava">
+        <div class="staff-section">
+            <div class="staff-section__ava staff-section__ava-1"></div>
+            <div class="staff-section__ava staff-section__ava-2">
+                <div class="staff-section__ava-2-more">
+                    <h2 class="staff-section__ava-2-tittle">Константин Спилберг</h2>
+                    <p class="staff-section__ava-2-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                    <button class="staff-section__ava-2-btn">Подробнее</button>
+                </div>
+            </div>
+            <div class="staff-section__ava staff-section__ava-3"></div>
+            <div class="staff-section__ava staff-section__ava-4"></div>
+            <div class="staff-section__ava staff-section__ava-5"></div>
+            <div class="staff-section__ava staff-section__ava-6"></div>
+            <div class="staff-section__ava staff-section__ava-7"></div>
+            <div class="staff-section__ava staff-section__ava-8"></div>
         </div>
     </div>
 </body>
