--- a/index.html
+++ b/index.html
@@ -4,104 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Burger</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="wrapper">
-        <div class="wrap-main-section">
-            <header class="header">
-                <div class="logo">
-                    <a href="index.html" class="logo__link">
-                        <img src="img/logo/logo.png" alt="Mr burger">
-                    </a>
-                </div>
-                <ul class="header__list">
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">О нас</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">Бургеры</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">Команда</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">Меню</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">Отзывы</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">Контакты</a>
-                    </li>
-                </ul>
-                <button class="header__button">
-                    Заказать
-                </button>
-            </header>
-            <div class="main-section">
-                <div class="container">
-                    <div class="main">
-                        <div class="main__img"></div>
-                        <div class="main__content">
-                            <h1 class="main__tittle">Мы делаем</h1>
-                            <p class="main__text">натуральные бургеры</p>
-                        </div>
-                        <ul class="main__list">
-                            <li class="main__item">
-                                <a href="#" class="main__link"><div class="main__el-active"></div></a>
-                            </li>
-                            <li class="main__item">
-                                <a href="#" class="main__link"><div class="main__el"></div></a>
-                            </li>
-                            <li class="main__item">
-                                <a href="#" class="main__link"><div class="main__el"></div></a>
-                            </li>
-                            <li class="main__item">
-                                <a href="#" class="main__link"><div class="main__el"></div></a>
-                            </li>
-                            <li class="main__item">
-                                <a href="#" class="main__link"><div class="main__el"></div></a>
-                            </li>
-                            <li class="main__item">
-                                <a href="#" class="main__link"><div class="main__el"></div></a>
-                            </li>
-                            <li class="main__item">
-                                <a href="#" class="main__link"><div class="main__el"></div></a>
-                            </li>
-                            <li class="main__item">
-                                <a href="#" class="main__link"><div class="main__el"></div></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <a href="#" class="main__link-next">
-                        <div class="main__scroll-logo"></div>
-                    </a>
+        <header class="header">
+            <div class="logo">
+                <a href="index.html" class="logo__link">
+                    <img src="img/logo/logo.png" alt="Mr burger">
+                </a>
+            </div>
+            <ul class="header__list">
+                <li class="header__item">
+                    <a href="#" class="header__item-link">О нас</a>
+                </li>
+                <li class="header__item">
+                    <a href="#" class="header__item-link">Бургеры</a>
+                </li>
+                <li class="header__item">
+                    <a href="#" class="header__item-link">Команда</a>
+                </li>
+                <li class="header__item">
+                    <a href="#" class="header__item-link">Меню</a>
+                </li>
+                <li class="header__item">
+                    <a href="#" class="header__item-link">Отзывы</a>
+                </li>
+                <li class="header__item">
+                    <a href="#" class="header__item-link">Контакты</a>
+                </li>
+            </ul>
+            <button class="header__btn">
+                Заказать
+            </button>
+        </header>
+        <section class="section natural">
+            <div class="container natural__container">
+                <div class="natural__img"></div>
+                <div class="natural__content">
+                    <h1 class="natural__tittle">Мы делаем</h1>
+                    <p class="natural__text">натуральные бургеры</p>
                 </div>
             </div>
-        </div>
-        <div class="best-section">
-            <div class="container">
-                <h1 class="best-section__tittle">Мы лучшие</h1>
-                <ul class="best-section__list">
-                    <li class="best-section__item">
-                        <div class="best-section__item-img best-section__item-img-meat"></div>
-                        <h2 class="best-section__item-tittle">100% свежее мясо</h2>
-                        <p class="best-section__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
+        </section>
+        <section class="section best">
+            <div class="container best__container">
+                <h1 class="best__tittle">Мы лучшие</h1>
+                <ul class="best__list">
+                    <li class="best__item">
+                        <div class="best__item-img best__item-img-meat"></div>
+                        <h2 class="best__item-tittle">100% свежее мясо</h2>
+                        <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
                     </li>
-                    <li class="best-section__item">
-                        <div class="best-section__item-img best-section__item-img-hand"></div>
-                        <h2 class="best-section__item-tittle">Ручная сборка</h2>
-                        <p class="best-section__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</p>
+                    <li class="best__item">
+                        <div class="best__item-img best__item-img-hand"></div>
+                        <h2 class="best__item-tittle">Ручная сборка</h2>
+                        <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</p>
                     </li>
-                    <li class="best-section__item">
-                        <div class="best-section__item-img best-section__item-img-natural"></div>
-                        <h2 class="best-section__item-tittle">Натуральные ингредиенты</h2>
-                        <p class="best-section__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
+                    <li class="best__item">
+                        <div class="best__item-img best__item-img-natural"></div>
+                        <h2 class="best__item-tittle">Натуральные ингредиенты</h2>
+                        <p class="best__item-text">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
                     </li>
                 </ul>
             </div>
-        </div>
+        </section>
         <div class="staff-section">
             <div class="staff-section__ava staff-section__ava-1"></div>
             <div class="staff-section__ava staff-section__ava-2">
@@ -118,6 +86,39 @@
             <div class="staff-section__ava staff-section__ava-7"></div>
             <div class="staff-section__ava staff-section__ava-8"></div>
         </div>
+    </div>
+    <div class="side-nav">
+        <ul class="side-nav__list">
+            <li class="side-nav__item">
+                <a href="#" class="side-nav__link"><div class="side-nav__active"></div></a>
+            </li>
+            <li class="side-nav__item">
+                <a href="#" class="side-nav__link"><div class="side-nav__el"></div></a>
+            </li>
+            <li class="side-nav__item">
+                <a href="#" class="side-nav__link"><div class="side-nav__el"></div></a>
+            </li>
+            <li class="side-nav__item">
+                <a href="#" class="side-nav__link"><div class="side-nav__el"></div></a>
+            </li>
+            <li class="side-nav__item">
+                <a href="#" class="side-nav__link"><div class="side-nav__el"></div></a>
+            </li>
+            <li class="side-nav__item">
+                <a href="#" class="side-nav__link"><div class="side-nav__el"></div></a>
+            </li>
+            <li class="side-nav__item">
+                <a href="#" class="side-nav__link"><div class="side-nav__el"></div></a>
+            </li>
+            <li class="side-nav__item">
+                <a href="#" class="side-nav__link"><div class="side-nav__el"></div></a>
+            </li>
+        </ul>
+    </div>
+    <div class="bot-scroll">
+        <a href="#" class="bot-scroll__link-next">
+            <div class="bot-scroll__scroll-logo"></div>
+        </a>
     </div>
 </body>
 </html>
