change navigation in header

--- a/index.html
+++ b/index.html
@@ -15,26 +15,28 @@
                     <img src="img/logo/logo.png" alt="Mr burger">
                 </a>
             </div>
-            <ul class="header__list">
-                <li class="header__item">
-                    <a href="#" class="header__item-link">О нас</a>
-                </li>
-                <li class="header__item">
-                    <a href="#" class="header__item-link">Бургеры</a>
-                </li>
-                <li class="header__item">
-                    <a href="#" class="header__item-link">Команда</a>
-                </li>
-                <li class="header__item">
-                    <a href="#" class="header__item-link">Меню</a>
-                </li>
-                <li class="header__item">
-                    <a href="#" class="header__item-link">Отзывы</a>
-                </li>
-                <li class="header__item">
-                    <a href="#" class="header__item-link">Контакты</a>
-                </li>
-            </ul>
+            <nav class="nav">
+                <ul class="header__list">
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">О нас</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">Бургеры</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">Команда</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">Меню</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">Отзывы</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__item-link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
             <button class="header__btn">
                 Заказать
             </button>
