--- a/index.html
+++ b/index.html
@@ -10,36 +10,38 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="logo">
-                <a href="index.html" class="logo__link">
-                    <img src="img/logo/logo.png" alt="Mr burger">
-                </a>
+            <div class="container header__container">
+                <div class="logo">
+                    <a href="index.html" class="logo__link">
+                        <img src="img/logo/logo.png" alt="Mr burger">
+                    </a>
+                </div>
+                <nav class="nav">
+                    <ul class="header__list">
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">О нас</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">Бургеры</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">Команда</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">Меню</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">Отзывы</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__item-link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <button class="header__btn">
+                    Заказать
+                </button>
             </div>
-            <nav class="nav">
-                <ul class="header__list">
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">О нас</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">Бургеры</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">Команда</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">Меню</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">Отзывы</a>
-                    </li>
-                    <li class="header__item">
-                        <a href="#" class="header__item-link">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-            <button class="header__btn">
-                Заказать
-            </button>
         </header>
         <section class="section natural">
             <div class="container natural__container">
@@ -47,6 +49,11 @@
                 <div class="natural__content">
                     <h1 class="natural__tittle">Мы делаем</h1>
                     <p class="natural__text">натуральные бургеры</p>
+                </div>
+                <div class="bot-scroll">
+                    <a href="#" class="bot-scroll__link-next">
+                        <div class="bot-scroll__scroll-logo"></div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -73,20 +80,62 @@
             </div>
         </section>
         <div class="staff-section">
-            <div class="staff-section__ava staff-section__ava-1"></div>
-            <div class="staff-section__ava staff-section__ava-2">
-                <div class="staff-section__ava-2-more">
-                    <h2 class="staff-section__ava-2-tittle">Константин Спилберг</h2>
-                    <p class="staff-section__ava-2-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                    <button class="staff-section__ava-2-btn">Подробнее</button>
+            <div class="staff-section__ava staff-section__ava-1">
+                <div class="staff-section__ava-more">
+                    <h2 class="staff-section__ava-tittle">Константин Спилберг</h2>
+                    <p class="staff-section__ava-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                    <button class="staff-section__ava-btn">Подробнее</button>
                 </div>
             </div>
-            <div class="staff-section__ava staff-section__ava-3"></div>
-            <div class="staff-section__ava staff-section__ava-4"></div>
-            <div class="staff-section__ava staff-section__ava-5"></div>
-            <div class="staff-section__ava staff-section__ava-6"></div>
-            <div class="staff-section__ava staff-section__ava-7"></div>
-            <div class="staff-section__ava staff-section__ava-8"></div>
+            <div class="staff-section__ava staff-section__ava-2">
+                <div class="staff-section__ava-more">
+                    <h2 class="staff-section__ava-tittle">Константин Спилберг</h2>
+                    <p class="staff-section__ava-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                    <button class="staff-section__ava-btn">Подробнее</button>
+                </div>
+            </div>
+            <div class="staff-section__ava staff-section__ava-3">
+                <div class="staff-section__ava-more">
+                    <h2 class="staff-section__ava-tittle">Константин Спилберг</h2>
+                    <p class="staff-section__ava-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                    <button class="staff-section__ava-btn">Подробнее</button>
+                </div>
+            </div>
+            <div class="staff-section__ava staff-section__ava-4">
+                <div class="staff-section__ava-more">
+                    <h2 class="staff-section__ava-tittle">Константин Спилберг</h2>
+                    <p class="staff-section__ava-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                    <button class="staff-section__ava-btn">Подробнее</button>
+                </div>
+            </div>
+            <div class="staff-section__ava staff-section__ava-5">
+                <div class="staff-section__ava-more">
+                    <h2 class="staff-section__ava-tittle">Константин Спилберг</h2>
+                    <p class="staff-section__ava-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                    <button class="staff-section__ava-btn">Подробнее</button>
+                </div>
+            </div>
+            <div class="staff-section__ava staff-section__ava-6">
+                <div class="staff-section__ava-more">
+                    <h2 class="staff-section__ava-tittle">Константин Спилберг</h2>
+                    <p class="staff-section__ava-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                    <button class="staff-section__ava-btn">Подробнее</button>
+                </div>
+            </div>
+            <div class="staff-section__ava staff-section__ava-7">
+                <div class="staff-section__ava-more">
+                    <h2 class="staff-section__ava-tittle">Константин Спилберг</h2>
+                    <p class="staff-section__ava-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                    <button class="staff-section__ava-btn">Подробнее</button>
+                </div>
+            </div>
+            <div class="staff-section__ava staff-section__ava-8">
+                <div class="staff-section__ava-more">
+                    <h2 class="staff-section__ava-tittle">Константин Спилберг</h2>
+                    <p class="staff-section__ava-text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                    <button class="staff-section__ava-btn">Подробнее</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="side-nav">
@@ -116,11 +165,6 @@
                 <a href="#" class="side-nav__link"><div class="side-nav__el"></div></a>
             </li>
         </ul>
-    </div>
-    <div class="bot-scroll">
-        <a href="#" class="bot-scroll__link-next">
-            <div class="bot-scroll__scroll-logo"></div>
-        </a>
     </div>
 </body>
 </html>
